infra/k8s/frontend/deployment.yaml
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: frontend
  spec:
    selector:
      matchLabels:
        app: frontend
    replicas: 1
    template:
      metadata:
        labels:
          app: frontend
      spec:
        containers:
        - name: frontend
          image: ahmedhesham301/3akarati-frontend:latest
          resources:
            requests:
              memory: "10Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "300m"
          ports:
          - containerPort: 80
